# scholar-lens

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.lambda  README.ko.md  README.md  cdk.json  pyproject.toml
.github/workflows/: ci.yml
assets/: tech-doc.md
docs/: design.md  tech-doc.md
docs/diagrams/: aws-architecture.drawio  pipeline.excalidraw
eval/: ARTIFACT_RUBRIC.md  RUBRIC.md
scholar_lens/: Dockerfile  main.py  requirements-lambda.txt  requirements.txt  tech_guide_main.py
scholar_lens/configs/: __init__.py  config-template.yaml  config.py
scholar_lens/slack/: __init__.py  blocks.py  bot.py  dispatcher.py  intent.py  lambda_receiver.py  lambda_worker.py  notifier.py
scholar_lens/src/: __init__.py  arxiv_handler.py  aws_helpers.py  citation_metadata.py  citation_summarizer.py  code_retriever.py  constants.py  content_extractor.py  explainer.py  logger.py  markdown_lint.py  markdown_math.py  metrics.py  paper_source.py  parser.py  pinned_transport.py  publisher.py  rate_limiter.py  runtime.py  summarizer.py  tech_guide.py  url_guard.py  utils.py  web_research.py
scholar_lens/src/prompts/: __init__.py  base.py  extraction.py  prompts.py  review.py  slack.py  summary.py  tech_guide.py
scholar_lens/src/utils/: __init__.py  batch.py  factories.py  graph.py  helpers.py  models.py  parsers.py  retry.py  xml_output.py
scripts/: ci_synth_check.py  deploy_infra.py  run_batch.py
tests/: conftest.py  explain.py  extract.py  parse.py  retrieve.py  summarize.py  test_arxiv_handler.py  test_aws_helpers.py  test_batch_processor.py  test_citation_redesign.py  test_code_retriever.py  test_config.py  test_explainer_logic.py  test_factories_config.py  test_language_and_frontmatter.py  test_main_helpers.py  test_markdown_lint.py  test_markdown_math.py  test_metrics.py  test_models_registry.py  test_notifier.py  test_paper_source.py  test_parser_figures.py  test_publisher.py  test_retry.py  test_runtime.py  test_security_and_quality_fixes.py  test_slack_bot.py  test_slack_dispatcher.py  test_slack_lambda_receiver.py  test_slack_lambda_worker.py  test_summarizer.py  test_tech_guide.py  test_utils_flags.py  test_utils_helpers.py  test_web_research.py  test_xml_output.py
