[tool.poetry]
name = "scholar-lens"
version = "0.1.0"
description = "A project that automatically generates AI/ML paper reviews"
authors = ["Jonas Kim <youngmki@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arxiv = "^2.1.3"
aws-cdk-lib = "^2.175.1"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.35.86"
defusedxml = "^0.7.1"
faiss-cpu = "^1.9.0.post1"
gitpython = "^3.1.43"
jupyter-black = "^0.4.0"
langchain = "^0.3.13"
langchain-aws = "^0.2.10"
langchain-community = "^0.3.13"
langgraph = "^0.2.60"
lxml = "^6.0.2"
nltk = "^3.9.1"
numpy = "^1.26.4"
pydantic = {extras = ["email"], version = "^2.10.5"}
pymupdf = "^1.25.1"
pygithub = "^2.8.1"
pypdf = "^5.1.0"
python-dotenv = "^1.0.1"
pytz = "^2025.1"
tiktoken = "^0.11.0"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
