[tool.poetry]
name = "scholar-lens"
version = "0.1.0"
description = "A project that automatically generates AI/ML paper reviews"
authors = ["Jonas Kim <youngmki@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arxiv = ">=2.1.3"
aws-cdk-lib = "^2.238.0"
beautifulsoup4 = ">=4.12.3"
black = "^26.1.0"
boto3 = ">=1.35.86,<2.0"
boto3-stubs = ">=1.42.44"
constructs = "^10.4.5"
defusedxml = ">=0.7.1"
faiss-cpu = ">=1.9.0.post1"
gitpython = ">=3.1.43"
langchain = ">=0.3.13,<1.0"
langchain-aws = ">=0.2.10,<1.0"
langchain-community = ">=0.3.13,<1.0"
langchain-core = ">=0.3.25,<1.0"
langchain-text-splitters = ">=0.3.0,<1.0"
langgraph = ">=0.2.60,<2.0"
lxml = ">=6.0.2"
nltk = ">=3.9.1"
numpy = ">=1.26.4"
pillow = ">=11.1.0"
pydantic = { extras = ["email"], version = ">=2.10.5" }
pygithub = ">=2.8.1"
pymupdf = ">=1.25.1"
pypdf = ">=5.1.0"
python-dotenv = ">=1.0.1"
pytz = ">=2025.1"
slack-bolt = ">=1.20.0"
tenacity = ">=8.0.0"
tqdm = ">=4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
moto = { extras = ["s3", "sns", "ssm", "batch", "sts"], version = ">=5.0" }
responses = ">=0.25"
ruff = ">=0.6"
mypy = ">=1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["scholar_lens"]
omit = ["*/tests/*", "*/__init__.py", "*/prompts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["cdk.out", "logs", "papers", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
# E501: long lines handled by black. UP042: str+Enum mixins are intentional —
# members must compare/serialise as plain strings (StrEnum changes semantics).
# UP046: PEP 695 generics would force a risky rewrite of the factory base class.
ignore = ["E501", "UP042", "UP046"]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files are re-export hubs; their "unused" imports are the API.
"**/__init__.py" = ["F401"]
# Tests deliberately assert on broad exceptions for Pydantic/argparse validation.
"tests/**" = ["B017"]
# Prompt templates contain semantically-significant trailing whitespace.
"**/prompts/prompts.py" = ["W291", "W293"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
explicit_package_bases = true
namespace_packages = true
files = ["scholar_lens", "scripts"]
exclude = "(cdk\\.out|logs|papers)"
# Suppress framework-typing noise so mypy can be a real (blocking) signal:
# - call-overload: boto3-stubs Session.client() only matches literal service
#   names, not the dynamic `str` we pass.
# - misc: Pydantic class-level field defaults accessed via the class object.
disable_error_code = ["call-overload", "misc"]
